<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_header"
        android:id="@+id/appHeaderMain"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appHeaderMain"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/conversions_layout_margin"
            android:layout_marginBottom="@dimen/conversions_layout_margin">

            <TextView
                android:id="@+id/textConvertFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/convert_from_label"
                android:layout_marginTop="@dimen/conversions_label_margin"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/textConvertTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/convert_to_label"
                android:layout_below="@+id/textConvertFrom"
                android:layout_marginTop="@dimen/conversions_label_margin"
                android:layout_marginBottom="@dimen/conversions_label_margin"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_currency_btn"
                android:id="@+id/currencyButton"
                android:layout_below="@+id/textConvertTo"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:onClick="settings"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/currencyFromLabel"
                android:layout_alignTop="@+id/textConvertFrom"
                android:layout_alignRight="@+id/currencyButton"
                android:layout_alignEnd="@+id/currencyButton" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/currencyToLabel"
                android:layout_alignTop="@+id/textConvertTo"
                android:layout_alignRight="@+id/currencyButton"
                android:layout_alignEnd="@+id/currencyButton" />

        </RelativeLayout>
    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/inputEditText"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/convert_btn"
        android:id="@+id/convertBtn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
